--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -505,3 +505,17 @@ body {
         margin: 24px auto 0 auto;
     }
 }
+
+/* página de empréstimo */
+.emprestar-info{
+    border-radius: 0;
+    padding: 18px 16px;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 28px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 18px;
+    text-transform: justify;
+    color: var(--cor-borda);
+}
