--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -82,7 +82,7 @@ body {
    CLASSES PADRÕES
    ============================== */
 
-.body-white {
+.body-color {
   background-color: var(--color-white);
 }
 
@@ -536,11 +536,12 @@ body {
 
 .info-book-container {
   max-width: 400px;
-  padding: 24px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  gap: 18px;
 }
 
 .info-book-top-flex {
@@ -548,6 +549,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  gap: 18px;
 }
 
 .info-book-cover {
@@ -555,14 +557,13 @@ body {
   height: 180px;
   background: #d3d3d3;
   border-radius: 8px;
-  margin: 0 auto 18px auto;
+  margin: 18px auto;
   display: block;
 }
 
 .info-book-details {
   width: 100%;
-  margin-top: 0;
-  margin-left: 0;
+  margin-top: 10px 0px;
   padding-left: 0;
   display: flex;
   flex-direction: column;
@@ -582,7 +583,7 @@ body {
   text-align: center;
   font-size: 1rem;
   color: #535353;
-  margin-bottom: 12px;
+  margin-bottom:30px;
 }
 
 .info-book-genres {
@@ -602,23 +603,24 @@ body {
   cursor: default;
 }
 
-.info-book-description {
-  border-radius: 0;
-  padding: 18px 18px;
+.info-book-description,
+.info-book-loan-dates {
+  padding: 18px 0px;
   font-size: 1rem;
   color: #333;
-  margin-bottom: 28px;
   width: 100%;
   box-sizing: border-box;
-  margin-top: 18px;
   text-transform: justify;
+}
+
+.empty-space {
+  flex: 1;
 }
 
 .btn-container {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .info-book-btn {
@@ -626,33 +628,28 @@ body {
   max-width: 400px;
 }
 
-/* Card aprimorado para telas médias */
-
+/* Layout horizontal para desktop e tablets */
 @media (min-width: 600px) {
 
-  .info-livro-container {
-    align-self: center;
-    max-width: 500px;
-    padding: 24px 12px;
-    box-shadow: var(--sombra-card);
-    border-radius: var(--radius-card);
-    background: var(--cor-branco);
-    border: 1px solid var(--cor-borda);
+  .body-color {
+    background: var(--color-background);
   }
-}
 
-/* Layout horizontal para desktop */
-@media (min-width: 900px) {
-
-  .info-livro-container {
+  .info-book-container {
+    max-width: 700px;
+    padding: 24px;
     display: flex;
+    align-self: center;
     flex-direction: column;
     align-items: stretch;
-    max-width: 700px;
-    padding: 32px;
+    box-shadow: var(--shadow-card);
+    border-radius: var(--radius-card);
+    background: var(--color-white);
+    border: 1px solid var(--color-border);
+    gap: 0;
   }
 
-  .info-livro-topo-flex {
+  .info-book-top-flex {
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
@@ -660,15 +657,15 @@ body {
     margin-bottom: 0;
   }
 
-  .info-livro-capa {
+  .info-book-cover {
     margin: 0 32px 0 0;
     display: inline-block;
-    max-width: 160px;
-    max-height: 220px;
+    max-width: 150px;
+    max-height: 180px;
     flex-shrink: 0;
   }
 
-  .info-livro-detalhes {
+  .info-book-details {
     width: auto;
     align-self: flex-start;
     margin-top: 0;
@@ -680,27 +677,32 @@ body {
     align-items: flex-start;
   }
 
-  .info-livro-descricao {
+  .info-book-description,
+  .info-book-loan-dates {
     width: 100%;
     margin-top: 14px;
   }
 
-  .info-livro-btn {
+  .btn-container {
+    justify-content: flex-start;
+  }
+
+  .info-book-btn {
     width: 100%;
     max-width: 160px;
 
   }
 }
 
-/* página de empréstimo */
-.emprestar-info {
-  border-radius: 0;
-  padding: 18px 16px;
-  font-size: 0.8rem;
-  margin-bottom: 28px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 18px;
-  text-transform: justify;
+/* ==============================
+   PÁGINA DE EMPRÉSTIMO DO LIVRO
+   ============================== */
+
+.info-book-loan-dates {
   color: var(--cor-cinza-escuro);
+  font-size: 0.8rem;
 }
+
+/* ==============================
+   PÁGINA DE EMPRÉSTIMO DO LIVRO
+   ============================== */
