--- a/assets/css/usuario.css
+++ b/assets/css/usuario.css
@@ -21,7 +21,7 @@
 .btn-search {
   margin-top: 0;
   border: none;
-  border-radius: 50%;
+  border-radius: 6px;
   width: 38px;
   height: 38px;
   display: flex;
